--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "globals": "^16.0.0",
     "prettier": "3.5.3",
     "typescript-eslint": "^8.32.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
