--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,8 @@ on:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+  repository_dispatch:
+    types: [run-playwright-tests]
 jobs:
   test:
     timeout-minutes: 60
